--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,16 +67,20 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light {
 	background: transparent!important;
-	position: absolute;
+	position: fixed; /*absolute*/
 	top: 0;
 	left: 0;
 	right: 0;
 	z-index: 3;
+	width: 100%; /* Osiguraj da se navbar širi preko cele širine ekrana */
+	/* Dodaj padding top za razmak između sadržaja i navigacije */
+    padding-top: 10px; /* Povećaj ovo ako je potrebno za bolje poravnavanje */
 	// padding-top: 30px;
 	@include media-breakpoint-down(md) {
 		background: $black!important;
-		position: relative;
+		position: fixed; /*position: relative;*/
 		top: 0;
+		width: 100%;
 		padding-top: 0;
 		padding-bottom: 0;
 		padding-left: 15px;
@@ -86,8 +90,8 @@ h1, h2, h3, h4, h5,
 		width: 1110px;
 		margin: 0 auto;
 		padding: 0;
-		@include media-breakpoint-up(lg){
-		}
+		/*@include media-breakpoint-up(lg){
+		}*/
 	}
 
 	.navbar-brand {
@@ -328,6 +332,20 @@ h1, h2, h3, h4, h5,
 	font-weight: 900;
 	font-size: 24px;
 	text-transform: uppercase;
+}
+
+@media screen and (max-width: 768px) {
+    .ftco-navbar-light {
+        position: fixed !important; /* Obavezno primeniti fixed poziciju za mobilne uređaje */
+		width: 100%;
+		top: 0;
+		padding-top: 10px;
+
+    }
+
+    .home-slider.owl-carousel .slider-item {
+        height: auto;
+    }
 }
 
 
@@ -825,6 +843,7 @@ h1, h2, h3, h4, h5,
 }
 
 
+
 //FTCO ABOUT
 .ftco-about{
 	.img-about{
@@ -953,6 +972,29 @@ h1, h2, h3, h4, h5,
 			}
 			a{
 				color: $white;
+			}
+		}
+		p{
+			line-height: 1.3;
+			font-size: 13px;
+			font-weight: 500;
+			letter-spacing: 3px;
+			text-transform: uppercase;
+			position: relative;
+			color: $primary;
+			&:after{
+				position: absolute;
+				bottom: -15px;
+				left: 0; 
+				right: 0;
+				content: '';
+				width: 30px;
+				height: 1px;
+				background: $black;
+				margin: 0 auto;
+			}
+			a{
+				color: $primary;
 			}
 		}
 		h4{
