--- a/scss/style.scss
+++ b/scss/style.scss
@@ -303,6 +303,7 @@ h1, h2, h3, h4, h5,
 		.navbar-toggler {
 			border: none;
 			color: rgba(0,0,0,.5)!important;
+			//color: white!important;
 			border-color: rgba(0,0,0,.5)!important;
 			cursor: pointer;
 			text-transform: uppercase;
