--- a/scss/style.scss
+++ b/scss/style.scss
@@ -998,36 +998,14 @@ h1, h2, h3, h4, h5,
 				margin: 0 auto;
 			}
 			a{
-				color: $white;
-			}
-		}
-		p{
-			line-height: 1.3;
-			font-size: 13px;
-			font-weight: 500;
-			letter-spacing: 3px;
-			text-transform: uppercase;
-			position: relative;
-			color: $primary;
-			&:after{
-				position: absolute;
-				bottom: -15px;
-				left: 0; 
-				right: 0;
-				content: '';
-				width: 30px;
-				height: 1px;
-				background: $black;
-				margin: 0 auto;
-			}
-			a{
-				color: $primary;
+				color: white;
 			}
 		}
 		h4{
-			font-size: 20px;
+			font-size: 10px;
 			font-weight: 300;
 			margin-bottom: 18px;
+			color: $primary;
 		}
 		span{
 			display: block;
@@ -1047,7 +1025,7 @@ h1, h2, h3, h4, h5,
 		h3{
 			color: $black;
 			&:after{
-				background: $black;
+				background: black;
 			}
 		}
 	}
