--- a/scss/style.scss
+++ b/scss/style.scss
@@ -367,6 +367,7 @@ h1, h2, h3, h4, h5,
     }
 
 	.home-slider.owl-carousel .slider-item .img {
+		touch-action: pan-y; /* Omogućava vertikalno skrolovanje */
 		background-size: cover;
 		background-position: center;
 		width: 100%;
@@ -1001,12 +1002,6 @@ h1, h2, h3, h4, h5,
 				color: white;
 			}
 		}
-		h4{
-			font-size: 10px;
-			font-weight: 300;
-			margin-bottom: 18px;
-			color: $primary;
-		}
 		span{
 			display: block;
 			text-transform: uppercase;
@@ -1029,6 +1024,7 @@ h1, h2, h3, h4, h5,
 			}
 		}
 	}
+	
 }
 
 
